networkpolicies.networking.k8s.io/ide-service.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  annotations:
    meta.helm.sh/release-name: gitpod
    meta.helm.sh/release-namespace: gitpod
  creationTimestamp: "2023-05-09T09:31:13Z"
  generation: 1
  labels:
    app: gitpod
    app.kubernetes.io/managed-by: Helm
    component: ide-service
  name: ide-service
  namespace: gitpod
  resourceVersion: "3460"
  uid: 826552b0-99b2-45ff-a438-3e256028d8a7
spec:
  ingress:
  - ports:
    - port: 9001
      protocol: TCP
  podSelector:
    matchLabels:
      app: gitpod
      component: ide-service
  policyTypes:
  - Ingress
status: {}
