networkpolicies.networking.k8s.io/image-builder-mk3.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  annotations:
    meta.helm.sh/release-name: gitpod
    meta.helm.sh/release-namespace: gitpod
  creationTimestamp: "2023-05-09T09:31:13Z"
  generation: 1
  labels:
    app: gitpod
    app.kubernetes.io/managed-by: Helm
    component: image-builder-mk3
  name: image-builder-mk3
  namespace: gitpod
  resourceVersion: "3464"
  uid: d0778353-c183-425d-9a78-81226d660993
spec:
  ingress:
  - from:
    - podSelector:
        matchLabels:
          component: server
    - podSelector:
        matchLabels:
          component: ws-manager
  podSelector:
    matchLabels:
      app: gitpod
      component: image-builder-mk3
  policyTypes:
  - Ingress
status: {}
