networkpolicies.networking.k8s.io/proxy-deny-all-allow-explicit.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  annotations:
    meta.helm.sh/release-name: gitpod
    meta.helm.sh/release-namespace: gitpod
  creationTimestamp: "2023-05-09T09:31:13Z"
  generation: 1
  labels:
    app: gitpod
    app.kubernetes.io/managed-by: Helm
    component: proxy
  name: proxy-deny-all-allow-explicit
  namespace: gitpod
  resourceVersion: "3455"
  uid: 31700a0f-da39-41cc-9237-ad9983a6a8b2
spec:
  ingress:
  - ports:
    - port: 80
      protocol: TCP
    - port: 443
      protocol: TCP
    - port: 22
      protocol: TCP
  - from:
    - namespaceSelector:
        matchLabels:
          chart: monitoring
      podSelector:
        matchLabels:
          component: server
    ports:
    - port: 9500
      protocol: TCP
  podSelector:
    matchLabels:
      app: gitpod
      component: proxy
  policyTypes:
  - Ingress
status: {}
