networkpolicies.networking.k8s.io/public-api-server.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  annotations:
    meta.helm.sh/release-name: gitpod
    meta.helm.sh/release-namespace: gitpod
  creationTimestamp: "2023-05-09T09:31:13Z"
  generation: 1
  labels:
    app: gitpod
    app.kubernetes.io/managed-by: Helm
    component: public-api-server
  name: public-api-server
  namespace: gitpod
  resourceVersion: "3465"
  uid: be5d455f-0c0b-4ef5-9f47-99fb12cb2d26
spec:
  ingress:
  - from:
    - podSelector:
        matchLabels:
          component: proxy
    ports:
    - port: 9001
      protocol: TCP
    - port: 9002
      protocol: TCP
  podSelector:
    matchLabels:
      app: gitpod
      component: public-api-server
  policyTypes:
  - Ingress
status: {}
