networkpolicies.networking.k8s.io/registry-facade.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  annotations:
    meta.helm.sh/release-name: gitpod
    meta.helm.sh/release-namespace: gitpod
  creationTimestamp: "2023-05-09T09:31:13Z"
  generation: 1
  labels:
    app: gitpod
    app.kubernetes.io/managed-by: Helm
    component: registry-facade
  name: registry-facade
  namespace: gitpod
  resourceVersion: "3459"
  uid: aa532795-7f48-455f-bb32-532104cc8ede
spec:
  ingress:
  - {}
  podSelector:
    matchLabels:
      app: gitpod
      component: registry-facade
  policyTypes:
  - Ingress
status: {}
